Modification du CSS du panier pour le rendre responsive. Ajout de code pour que le panier soit correctement visible sur la version mobile.

--- a/WebContent/inc/css/DragNDrop/dragNDrop.css
+++ b/WebContent/inc/css/DragNDrop/dragNDrop.css
@@ -113,9 +113,10 @@ a { text-decoration: none }
     margin-top: 5px;
 }
 
+/*
 #price {
     margin-left: 95px;
-}
+} */
 
 #product ul li a h5,
 #product ul li a p {
@@ -136,13 +137,14 @@ a { text-decoration: none }
 }
 
 .basket .basket_list {
-    width: 272px;
+   
     background-color: #fff;
     border: 2px dashed transparent;
     border-radius: 4px;
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
 }
+ /*width: 272px;*/
 
 .basket.active .basket_list,
 .basket.hover .basket_list { border-color: #ffa0a3 }
